2002-08-25 21:41  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (-_composite_func::::::): Implement
	special optimized handling of transparent source.

2002-08-25 20:48  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/gsc/GSGState.h, Headers/gsc/gscolors.h,
	Source/art/ARTContext.m, Source/gsc/GSGState.m, Source/gsc/gscolors.c,
	Source/winlib/WIN32GState.m, Source/xlib/XGGState.m: Optimize color
	handling by passing around pointers to device_color_t structures
	(instead of the structures themselves).

2002-08-23 01:54  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTWindowBuffer.m (+artWindowBufferForWindow:): Mark
	the segment for destruction after X has attached to it.

2002-08-23 01:44  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: Implement handling of non-rectangle
	clipping paths. Use it when rendering paths (but not for other
	operators yet).

2002-08-22 02:34  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: (-DPSrectclip::::): Fix rounding when
	converting to pixel coordinates.

2002-08-21 20:27  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m, Source/art/ARTWindowBuffer.h,
	Source/art/ARTWindowBuffer.m, Source/art/GNUmakefile: Renamed the
	WinImage class to ARTWindowBuffer and moved it to its own file.

2002-08-21 14:52  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/blit.h, Source/art/blit.m, Source/art/ftfont.h,
	Source/art/ftfont.m: Reformat to fit coding standards better.

2002-08-21 13:50  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m: Move common code from _fill and DPSstroke
	to convert the current path to an ArtVpath to a new method. Update
	callers.

	(-compositerect:op:): Create alpha buffer for NSCompositeCopy
	if the current color isn't completely opaque.

2002-08-21  Alexander Malmberg  <alexander@malmberg.org>
