@@ -1,3 +1,8 @@
+2002-08-26 00:33  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ARTContext.m (-DPSimage:::::::::::): Assume input is
+	pre-multiplied.
+
 2002-08-25 21:41  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ARTContext.m (-_composite_func::::::): Implement
